force-app/main/default/objects/SBAA_Enablement_IDs__c/SBAA_Enablement_IDs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the ID&apos;s  used by the SBAA Enablement unmanaged package. Includes Quote record type ID&apos;s that are referenced by the &quot;Advanced Approvals Status and Record Update&quot; as well as the ID of the logo referenced by the advanced approval email templates.</description>
    <label>SBAA Enablement ID&apos;s</label>
</CustomObject>