force-app/main/default/objects/SBAA_Enablement_IDs__c/fields/Approval_Email_Logo_ID__c.field-meta.xml
<CustomField>
    <fullName>Approval_Email_Logo_ID__c</fullName>
    <description>Contains the ID of the image used by VisualForce email templates as part of the SBAA Quote Enablement Package. Update this to the ID of the image that will be displayed as a logo on approval requests and notifications.</description>
    <inlineHelpText>Contains the ID of the image used by VisualForce email templates as part of the SBAA Quote Enablement Package. Update this to the ID of the image that will be displayed as a logo on approval requests and notifications.</inlineHelpText>
    <label>Approval Email Logo ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>