force-app/main/default/objects/SBAA_Enablement_IDs__c/fields/In_Progress_Quote_RT__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Quote_RT__c</fullName>
    <description>Contains the ID for the In Progress record type of the CPQ quote object. Update when installing into new environments.</description>
    <inlineHelpText>Contains the ID for the In Progress record type of the CPQ quote object. Update when installing into new environments.</inlineHelpText>
    <label>In Progress Quote RT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>